chore(package): use redux & redux-thunk

--- a/package.json
+++ b/package.json
@@ -6,10 +6,15 @@
     "antd": "^2.13.3",
     "husky": "^0.14.3",
     "lint-staged": "^4.2.3",
+    "lodash": "^4.17.4",
     "prettier": "^1.7.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "react-scripts": "1.0.14"
+    "react-redux": "^5.0.6",
+    "react-scripts": "1.0.14",
+    "redux": "^3.7.2",
+    "redux-create-reducer": "^1.1.1",
+    "redux-thunk": "^2.2.0"
   },
   "lint-staged": {
     "src/**/*.{js,jsx,json,css}": [
