--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "lint-staged": {
     "src/**/*.{js,jsx,json,css}": [
-      "prettier --single-quote --write",
+      "prettier --config .prettierrc --write",
       "git add"
     ]
   },
