--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "scripts": {
     "flow": "flow",
     "precommit": "lint-staged && npm run flow",
+    "prepush": "CI=true npm run test",
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test --env=jsdom",
