--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "devDependencies": {
     "babel-plugin-import": "^1.5.0",
-    "react-app-rewired": "^1.3.0"
+    "react-app-rewired": "^1.3.0",
+    "redux-devtools-extension": "^2.13.2"
   }
 }
