--- a/package.json
+++ b/package.json
@@ -30,11 +30,18 @@
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy:aws": "gulp deploy"
   },
   "devDependencies": {
     "babel-plugin-import": "^1.5.0",
+    "gulp": "^3.9.1",
+    "gulp-awspublish": "^3.3.0",
+    "gulp-cloudfront": "0.0.14",
+    "gulp-load-plugins": "^1.5.0",
+    "gulp-rename": "^1.2.2",
     "react-app-rewired": "^1.3.0",
-    "redux-devtools-extension": "^2.13.2"
+    "redux-devtools-extension": "^2.13.2",
+    "run-sequence": "^2.2.0"
   }
 }
