--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react": "^15.6.2",
     "react-dom": "^15.6.2",
     "react-redux": "^5.0.6",
+    "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
     "redux-create-reducer": "^1.1.1",
     "redux-thunk": "^2.2.0"
