--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "husky": "^0.14.3",
     "lint-staged": "^5.0.0",
     "prettier": "^1.7.0",
+    "react-app-rewire-less": "^2.1.0",
     "react-app-rewired": "^1.3.0",
     "react-scripts": "1.0.14",
     "redux-devtools-extension": "^2.13.2",
