refactor(App): use less instead of css

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "redux-thunk": "^2.2.0"
   },
   "lint-staged": {
-    "src/**/*.{js,jsx,json,css}": [
+    "src/**/*.{js,jsx,json,css,less}": [
       "prettier --config .prettierrc --write",
       "git add"
     ]
