--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
   },
   "devDependencies": {
     "babel-plugin-import": "^1.5.0",
+    "enzyme": "^3.2.0",
+    "enzyme-adapter-react-16": "^1.1.0",
+    "enzyme-to-json": "^3.2.2",
     "flow-bin": "^0.59.0",
     "gulp": "^3.9.1",
     "gulp-awspublish": "^3.3.0",
