--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "babel-plugin-import": "^1.5.0",
     "enzyme": "^3.2.0",
     "enzyme-adapter-react-16": "^1.1.0",
+    "enzyme-shallow-until": "^1.0.1",
     "enzyme-to-json": "^3.2.2",
     "flow-bin": "^0.59.0",
     "gulp": "^3.9.1",
