--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "antd": "^2.13.3",
+    "antd": "^3.0.0",
     "lodash": "^4.17.4",
-    "react": "^15.6.2",
-    "react-dom": "^15.6.2",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
@@ -41,8 +41,8 @@
     "lint-staged": "^5.0.0",
     "prettier": "^1.7.0",
     "react-app-rewire-less": "^2.1.0",
-    "react-app-rewired": "^1.3.0",
-    "react-scripts": "1.0.14",
+    "react-app-rewired": "^1.3.5",
+    "react-scripts": "^1.0.17",
     "redux-devtools-extension": "^2.13.2",
     "run-sequence": "^2.2.0"
   }
