--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-app-rewire-less": "^2.1.0",
     "react-app-rewired": "^1.3.5",
     "react-scripts": "^1.0.17",
+    "react-test-renderer": "^16.2.0",
     "redux-devtools-extension": "^2.13.2",
     "run-sequence": "^2.2.0"
   }
