--- a/package.json
+++ b/package.json
@@ -36,11 +36,6 @@
     "enzyme-shallow-until": "^1.0.1",
     "enzyme-to-json": "^3.2.2",
     "flow-bin": "^0.59.0",
-    "gulp": "^3.9.1",
-    "gulp-awspublish": "^3.3.0",
-    "gulp-cloudfront": "0.0.14",
-    "gulp-load-plugins": "^1.5.0",
-    "gulp-rename": "^1.2.2",
     "husky": "^0.14.3",
     "lint-staged": "^5.0.0",
     "prettier": "^1.7.0",
@@ -48,7 +43,6 @@
     "react-app-rewired": "^1.3.5",
     "react-scripts": "^1.0.17",
     "react-test-renderer": "^16.2.0",
-    "redux-devtools-extension": "^2.13.2",
-    "run-sequence": "^2.2.0"
+    "redux-devtools-extension": "^2.13.2"
   }
 }
