--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     ]
   },
   "scripts": {
+    "analyze": "source-map-explorer build/static/js/main.*",
     "flow": "flow check",
     "precommit": "lint-staged && npm run flow",
     "prepush": "CI=true npm run test",
@@ -43,6 +44,7 @@
     "react-app-rewired": "^1.3.5",
     "react-scripts": "^1.0.17",
     "react-test-renderer": "^16.2.0",
-    "redux-devtools-extension": "^2.13.2"
+    "redux-devtools-extension": "^2.13.2",
+    "source-map-explorer": "^1.5.0",
   }
 }
