chore(package): add lint:js

--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "precommit": "lint-staged && npm run flow",
     "prepush": "CI=true npm run test",
     "lint:css": "npm run lint:stylelint 'src/**/*.less'",
+    "lint:js": "npm run lint:prettier 'src/**/*.js'",
     "lint:stylelint": "stylelint --config config/.stylelintrc",
+    "lint:prettier": "prettier --config config/.prettierrc --ignore-path config/.prettierignore",
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test --env=jsdom",
