--- a/package.json
+++ b/package.json
@@ -30,9 +30,7 @@
     "lint:prettier": "prettier --config config/.prettierrc --ignore-path config/.prettierignore",
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
-    "test": "react-app-rewired test --env=jsdom",
-    "eject": "react-scripts eject",
-    "deploy:aws": "gulp deploy"
+    "test": "react-app-rewired test --env=jsdom"
   },
   "devDependencies": {
     "babel-plugin-import": "^1.5.0",
