--- a/.travis.yml
+++ b/.travis.yml
@@ -27,8 +27,6 @@ before_script: greenkeeper-lockfile-update
 after_script: greenkeeper-lockfile-upload
 
 script:
-  - npm run flow
+  - npm run lint && npm run flow
   - npm run test
-  - npm run build
-after_success:
-  - bash ./tools/deploy2AWSCloudFront.sh
+  - npm run build && npm --silent run analyze -- --html > bundle-analysis.log.html
