chore(lint:js): only show different

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "lint": "npm run lint:js && npm run lint:css",
     "lint:fix": "npm run lint:js -- -- --write && npm run lint:css -- -- --fix",
     "lint:css": "npm run lint:stylelint 'src/**/*.less'",
-    "lint:js": "npm run lint:prettier 'src/**/*.js'",
+    "lint:js": "npm run lint:prettier 'src/**/*.js' -- --list-different",
     "lint:stylelint": "stylelint --config config/.stylelintrc",
     "lint:prettier": "prettier --config config/.prettierrc --ignore-path config/.prettierignore",
     "precommit": "lint-staged",
