--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -58,6 +58,69 @@ jobs:
 
       - run: npm run test
 
+  build:
+    <<: *defaults
+    steps:
+      - restore_cache:
+          key: source-{{ .Branch }}-{{ .Revision }}
+      - restore_cache:
+          key: depens-{{ checksum "package.json" }}
+
+      - run: npm run build
+
+      - persist_to_workspace:
+          root: ~/repo
+          paths:
+            - build
+
+  deploy:
+    <<: *defaults
+    steps:
+      - attach_workspace:
+          at: ~/repo/build
+
+      # modify below others like run aws deploy cmd or scp files to a ftp server
+      - store_artifacts:
+          path: ~/repo/build
+          destination: prod-dist
+
+  deploy:
+    <<: *defaults
+    steps:
+      - attach_workspace:
+          at: ~/repo/build
+
+      # modify below others like run aws deploy cmd or scp files to a ftp server
+      - store_artifacts:
+          path: ~/repo/build
+          destination: dev-dist
+
+  analyze:
+    <<: *defaults
+    steps:
+      - restore_cache:
+          key: source-{{ .Branch }}-{{ .Revision }}
+      - restore_cache:
+          key: depens-{{ checksum "package.json" }}
+      - attach_workspace:
+          at: ~/repo/build
+
+      - run: npm --silent run analyze -- --html > bundle-analysis.log.html
+
+      - store_artifacts:
+          path: /tmp/artifact-1
+          destination: bundle-analysize.html
+
+  coverage:
+    <<: *defaults
+    steps:
+      - restore_cache:
+          key: source-{{ .Branch }}-{{ .Revision }}
+      - restore_cache:
+          key: depens-{{ checksum "package.json" }}
+
+      - run: npm run test -- --coverage
+
 workflows:
   version: 2
   lint_and_flow:
