--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -73,3 +73,11 @@ jobs:
           key: depens-{{ checksum "package.json" }}
 
       - run: npm run test -- --coverage
+
+workflows:
+  version: 2
+  build_and_test:
+    jobs:
+      - lint
+      - test
+      - build
