--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,25 +6,44 @@ defaults: &defaults
 
 version: 2
 jobs:
+  install_dependencies:
+    <<: *defaults
+    steps:
+      - checkout
+      - restore_cache:
+          keys:
+            - depens-{{ checksum "package.json" }}
+            - depens-
+
+      - run: npm install
+
+      - save_cache:
+          paths:
+            - node_modules
+          key: depens-{{ checksum "package.json" }}
+          
   lint:
     <<: *defaults
     steps:
       - checkout
-      - run: npm install
+      - restore_cache:
+          key: depens-{{ checksum "package.json" }}
       - run: npm run lint && npm run flow
 
   test:
     <<: *defaults
     steps:
       - checkout
-      - run: npm install
+      - restore_cache:
+          key: depens-{{ checksum "package.json" }}
       - run: npm run test
 
   build:
     <<: *defaults
     steps:
       - checkout
-      - run: npm install
+      - restore_cache:
+          key: depens-{{ checksum "package.json" }}
       - run: npm run build
       
   deploy:
@@ -78,6 +97,13 @@ workflows:
   version: 2
   build_and_test:
     jobs:
+      - install_dependencies:
       - lint
+          requires:
+            - install_dependencies
       - test
+          requires:
+            - install_dependencies
       - build
+          requires:
+            - install_dependencies
