--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,10 +5,27 @@ defaults: &defaults
   working_directory: ~/repo
 version: 2
 jobs:
+  checkout_code:
+    <<: *defaults
+    steps:
+      - restore_cache:
+          keys:
+            - source-{{ .Branch }}-{{ .Revision }}
+            - source-{{ .Branch }}-
+            - source-
+
+      - checkout
+
+      - save_cache:
+          key: source-v1-{{ .Branch }}-{{ .Revision }}
+          paths:
+            - ".git"
+
   install_dependencies:
     <<: *defaults
     steps:
-      - checkout
+      - restore_cache:
+          key: source-{{ .Branch }}-{{ .Revision }}
       - restore_cache:
           keys:
             - depens-{{ checksum "package.json" }}
@@ -21,14 +38,16 @@ jobs:
   lint:
     <<: *defaults
     steps:
-      - checkout
+      - restore_cache:
+          key: source-{{ .Branch }}-{{ .Revision }}
       - restore_cache:
           key: depens-{{ checksum "package.json" }}
       - run: npm run lint && npm run flow
   test:
     <<: *defaults
     steps:
-      - checkout
+      - restore_cache:
+          key: source-{{ .Branch }}-{{ .Revision }}
       - restore_cache:
           key: depens-{{ checksum "package.json" }}
       - run: npm run test
@@ -36,7 +55,8 @@ jobs:
   build:
     <<: *defaults
     steps:
-      - checkout
+      - restore_cache:
+          key: source-{{ .Branch }}-{{ .Revision }}
       - restore_cache:
           key: depens-{{ checksum "package.json" }}
       - run: npm run build
@@ -61,7 +81,8 @@ jobs:
   analyze:
     <<: *defaults
     steps:
-      - checkout
+      - restore_cache:
+          key: source-{{ .Branch }}-{{ .Revision }}
       - restore_cache:
           key: depens-{{ checksum "package.json" }}
       - attach_workspace:
@@ -82,7 +103,10 @@ workflows:
   version: 2
   build_and_test:
     jobs:
-      - install_dependencies
+      - checkout_code
+      - install_dependencies:
+          requires:
+            - checkout_code
       - lint:
           requires:
             - install_dependencies
@@ -92,3 +116,17 @@ workflows:
       - build:
           requires:
             - install_dependencies
+      - deploy:
+          type: approval
+          requires:
+            - build
+          filters:
+            branches:
+              only:
+                - master
+      - analyze:
+          requires:
+            - build
+      - coverage:
+          requires:
+            - test
