chore(circleci): try cache whole repo

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,7 @@ jobs:
       - save_cache:
           key: source-{{ .Branch }}-{{ .Revision }}
           paths:
-            - ".git"
+            - "~/repo"
 
   install_dependencies:
     <<: *defaults
