--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,20 +28,21 @@ jobs:
           key: source-{{ .Branch }}-{{ .Revision }}
       - restore_cache:
           keys:
+            - depens-{{ checksum "package.json" }}-{{ checksum "package-lock.json" }}
             - depens-{{ checksum "package.json" }}
             - depens-
       - run: npm install
       - save_cache:
           paths:
             - node_modules
-          key: depens-{{ checksum "package.json" }}
+          key: depens-{{ checksum "package.json" }}-{{ checksum "package-lock.json" }}
   lint:
     <<: *defaults
     steps:
       - restore_cache:
           key: source-{{ .Branch }}-{{ .Revision }}
       - restore_cache:
-          key: depens-{{ checksum "package.json" }}
+          key: depens-{{ checksum "package.json" }}-{{ checksum "package-lock.json" }}
       - run: npm run lint && npm run flow
   test:
     <<: *defaults
@@ -49,7 +50,7 @@ jobs:
       - restore_cache:
           key: source-{{ .Branch }}-{{ .Revision }}
       - restore_cache:
-          key: depens-{{ checksum "package.json" }}
+          key: depens-{{ checksum "package.json" }}-{{ checksum "package-lock.json" }}
       - run: npm run test
 
   build:
@@ -58,7 +59,7 @@ jobs:
       - restore_cache:
           key: source-{{ .Branch }}-{{ .Revision }}
       - restore_cache:
-          key: depens-{{ checksum "package.json" }}
+          key: depens-{{ checksum "package.json" }}-{{ checksum "package-lock.json" }}
 
       - run: npm run build
 
@@ -67,6 +68,7 @@ jobs:
           paths:
             - build
             - package.json
+            - package-lock.json
   deploy:
     <<: *defaults
     steps:
@@ -91,7 +93,7 @@ jobs:
       - attach_workspace:
           at: ~/repo
       - restore_cache:
-          key: depens-{{ checksum "package.json" }}
+          key: depens-{{ checksum "package.json" }}-{{ checksum "package-lock.json" }}
       - run: npm --silent run analyze -- --html > bundle-analysis.html
       - store_artifacts:
           path: bundle-analysis.html
@@ -102,7 +104,7 @@ jobs:
       - restore_cache:
           key: source-{{ .Branch }}-{{ .Revision }}
       - restore_cache:
-          key: depens-{{ checksum "package.json" }}
+          key: depens-{{ checksum "package.json" }}-{{ checksum "package-lock.json" }}
       - run: npm run test -- --coverage
 workflows:
   version: 2
