--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-dom": "^16.3.2",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
+    "recompose": "^0.27.0",
     "redux": "^4.0.0",
     "redux-create-reducer": "^1.1.2",
     "redux-thunk": "^2.2.0"
@@ -44,6 +45,7 @@
     "@commitlint/cli": "^6.2.0",
     "@commitlint/config-conventional": "^6.1.3",
     "babel-plugin-import": "^1.7.0",
+    "babel-plugin-lodash": "^3.3.2",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "enzyme-shallow-until": "^1.0.1",
