--- a/.travis.yml
+++ b/.travis.yml
@@ -26,9 +26,11 @@ before_install:
 - npm install -g greenkeeper-lockfile@1
 before_script: greenkeeper-lockfile-update
 after_script: greenkeeper-lockfile-upload
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
 
 script:
   - npm run lint && npm run flow
-  - npm run test
   - npm run test -- --coverage
-  - npm run build && npm --silent run analyze -- --html > bundle-analysis.log.html
+  - npm run build && npm run analyze:ci
+  - npm run deploy:ci
