--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
   },
   "scripts": {
     "analyze": "source-map-explorer build/static/js/main.*",
+    "analyze:ci": "npm --silent run analyze -- --html > bundle-analysis.html",
+    "deploy": "gh-pages -d build",
+    "deploy:ci": "cp coverage bundle-analysis.html -r build && npm run deploy",
     "flow": "flow check",
     "lint": "npm run lint:js && npm run lint:css",
     "lint:fix": "npm run lint:js -- --write && npm run lint:css -- --fix",
@@ -41,6 +44,7 @@
     "build": "react-app-rewired build",
     "test": "react-app-rewired test --env=jsdom"
   },
+  "homepage" : "http://stupidism.github.io/cra-rewired-starter",
   "devDependencies": {
     "@commitlint/cli": "^6.2.0",
     "@commitlint/config-conventional": "^6.1.3",
@@ -51,6 +55,7 @@
     "enzyme-shallow-until": "^1.0.1",
     "enzyme-to-json": "^3.3.3",
     "flow-bin": "^0.71.0",
+    "gh-pages": "^1.1.0",
     "husky": "^0.14.3",
     "lint-staged": "^7.1.0",
     "prettier": "^1.12.1",
