chore(circleci): simplify workflow, use only one

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,8 +52,11 @@ jobs:
           key: source-{{ .Branch }}-{{ .Revision }}
       - restore_cache:
           key: depens-{{ checksum "package.json" }}-{{ checksum "package-lock.json" }}
-      - run: npm run test
-
+      - run: npm run test:coverage
+      - persist_to_workspace:
+          root: ~/repo
+          paths:
+            - coverage
   build:
     <<: *defaults
     steps:
@@ -70,24 +73,6 @@ jobs:
             - build
             - package.json
             - package-lock.json
-  deploy:
-    <<: *defaults
-    steps:
-      - attach_workspace:
-          at: ~/repo
-      # modify below others like run aws deploy cmd or scp files to a ftp server
-      - store_artifacts:
-          path: ~/repo/build
-          destination: prod-dist
-  deploy_dev:
-    <<: *defaults
-    steps:
-      - attach_workspace:
-          at: ~/repo
-      # modify below others like run aws deploy cmd or scp files to a ftp server
-      - store_artifacts:
-          path: ~/repo/build
-          destination: dev-dist
   analyze:
     <<: *defaults
     steps:
@@ -95,21 +80,23 @@ jobs:
           at: ~/repo
       - restore_cache:
           key: depens-{{ checksum "package.json" }}-{{ checksum "package-lock.json" }}
-      - run: npm --silent run analyze -- --html > bundle-analysis.html
+      - run: npm run analyze:ci
       - store_artifacts:
           path: bundle-analysis.html
           destination: bundle-analysize.html
-  coverage:
+      - persist_to_workspace:
+          root: ~/repo
+          paths:
+            - bundle-analysis.html
+  deploy:
     <<: *defaults
     steps:
-      - restore_cache:
-          key: source-{{ .Branch }}-{{ .Revision }}
-      - restore_cache:
-          key: depens-{{ checksum "package.json" }}-{{ checksum "package-lock.json" }}
-      - run: npm run test -- --coverage
+      - attach_workspace:
+          at: ~/repo
+      - run: npm run deploy:ci
 workflows:
   version: 2
-  lint_and_build:
+  ci_cd:
     jobs:
       - checkout_code
       - install_dependencies:
@@ -118,67 +105,20 @@ workflows:
       - lint:
           requires:
             - install_dependencies
+      - test:
+          requires:
+            - install_dependencies
       - build:
           requires:
             - lint
-
-  test_and_coverage:
-    jobs:
-      - checkout_code
-      - install_dependencies:
-          requires:
-            - checkout_code
-      - test:
-          requires:
-            - install_dependencies
-      - coverage:
-          requires:
             - test
-
-  build_and_deploy:
-    jobs:
-      - checkout_code:
-          filters:
-            branches:
-              only:
-                - master
-                - develop
-      - install_dependencies:
-          requires:
-            - checkout_code
-      - test:
-          requires:
-            - install_dependencies
-      - build:
-          requires:
-            - install_dependencies
-      - deploy:
-          type: approval
-          requires:
-            - build
-            - test
-          filters:
-            branches:
-              only:
-                - master
-      - deploy_dev:
-          requires:
-            - build
-            - test
-          filters:
-            branches:
-              only:
-                - develop
-
-  build_and_analyze:
-    jobs:
-      - checkout_code
-      - install_dependencies:
-          requires:
-            - checkout_code
-      - build:
-          requires:
-            - install_dependencies
       - analyze:
           requires:
             - build
+      - deploy:
+          requires:
+            - analyze
+          filters:
+            branches:
+              only:
+                - master
