fix(ci): fix for analyze and deploy

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -80,10 +80,9 @@ jobs:
       - restore_cache:
           key: depens-{{ checksum "package.json" }}-{{ checksum "package-lock.json" }}
       - run: npm run analyze:ci
-      - persist_to_workspace:
-          root: ~/repo
-          paths:
-            - build
+      - store_artifacts:
+          path: analysis
+          destination: analysis
   deploy:
     <<: *defaults
     steps:
@@ -91,7 +90,6 @@ jobs:
           at: ~/repo
       - restore_cache:
           key: depens-{{ checksum "package.json" }}-{{ checksum "package-lock.json" }}
-      - run: mv coverage build
       - store_artifacts:
           path: build
           destination: build
