--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ before_script: greenkeeper-lockfile-update
 after_script: greenkeeper-lockfile-upload
 after_success:
   - bash <(curl -s https://codecov.io/bash)
-  - cp -r coverage bundle-analysis.html build && npm run deploy:ci
+  - mv coverage analysis build && npm run deploy:ci
 
 script:
   - npm run lint && npm run flow
